Upgrade openfeign to 10.1.0 (#95)
Upgrade to OpenFeign 10.1.0